--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -761,11 +761,414 @@ cos(theta) 사용
 
 
 
-#### 20230217
+#### 20230218
 
 ### 15)행렬 (Matrix) 소개와 곱셈. 매트릭스 알면 핵아재!
 
+행렬, 매트릭스
 
+행과 열로 이루어진 숫자의 조합, 집합
+
+행(Row, 세로)
+열(Columns, 가로)
+
+헷깔리면
+엔터키 => 개행을 생각하면된다. 그래서 행 다음줄
+
+a1,1 => a의 1행 1열
+a1,2 => a의 1행 2열
+
+a3,3 => a의 3행 3열
+
+간략화하면 a3, 3 a3, 2
+
+어찌됫든 표현을 행과 열을 표현한다보면됨
+
+
+행렬은 트랜스폼으로 표현될수 있다.  
+
+우리 눈에는 포지션과 로테이션값, 스케일값따로 되있지만
+
+내부적으로는 한묶음으로 해서 행렬적로 표현한다.
+유니티뿐만 아니라 다른엔진들도 이런식으로 표현한다.
+
+내부구조는 행렬로 사용됨
+그래서 행렬이 어덯게 이루어지고 어덯게 다루어 지는지 이야기할려함
+
+
+트랜스폼이 행렬로 어덯게 표현되는지
+
+이동할때 회전할때 스케일이 변경됫을때 반영해야되는데
+이런게 어덯게 반영되는지 확인
+
+행렬의 곱셈은 얼핏봣을때 복잡해보일수 있지만
+![행렬의곱셉1](행렬의곱셉1.png)
+
+사실은 내적(벡터의곱셈)으로 이루어져있다.
+vector2(a11, a12) * vector2(b11, b21)
+
+앞 매트릭스는 행끼리 벡터로 취급.
+뒷 매트릭스는 열끼리 벡터로 취급.
+
+
+앞  뒤
+a→  c↓ d↓
+b→ 
+
+a b c d 는 벡터
+
+a * c  a * d  (위에꺼는 a를 곱한거)
+b * c  b * d  (아래꺼는 b를 곱한거)
+
+[a11 a12] [b11 b12]
+[a21 a22] [b21 b22]
+
+(a11 * b11 + a12 * b21) (a11 * b12 + a12 * b22)
+(a21 * b11 + a22 * b21) (a21 * b12 + a22 * b22)
+
+※기억하기(매트릭스의 곱셈)
+계산할때 개행을 생각하자.
+첫번쨰 개행먼저 식을 다 쓰고 그다음개행을 써가는
+방식으로 쓰는 방식을 사용하자
+
+순서가 
+개행0을 기준점으로 잡고 열순서대로 내적을 먼저처리
+그다음 개행을 기준점으로 위와 똑같이 수행.
+
+![행렬의곱셉2](행렬의곱셉2.png)
+
+[3 1] [4 0]
+[0 2] [1 2]
+
+(3 * 4 + 1 * 1) (3 * 0 + 1 * 2)
+(0 * 4 + 2 * 1) (0 * 0 + 2 * 2)
+
+[13, 2]
+[2, 4]
+
+2by2 행렬 
+행by렬
+
+
+[5 3] [6 7]
+[1 4] [9 8]
+
+(5* 6 + 3* 9) (5 * 7 + 3 * 8)
+
+(행렬곱셈 패턴? 보인다는데)
+행렬의 열과 렬의 갯수가 서로곱할때 중요하고 이게 트랜스폼다룰때 중요하다
+
+※행렬관련 궁금해서 찾아본구역
+1. 덧셈 뺄셈을 하기 위해선 두행렬의 행 과 열이 서로 같아야된다
+)가능
+2by3은 2by3 
+3by3은 3by3 
+
+)불가능
+3by2 2by3
+3by3 2by2
+
+정리 : AbyB (+-연산) AbyB == 형태여야지 계산이 가능
+
+2. 곱셈은 앞의 렬과 뒷의 행의수가 같아야 곱셈이 가능
+)가능
+3by2 2by3
+2by1 1by2
+
+정리 : AbyB (**연산) BbyA == 형태여야지 계산이 가능
+
+스칼라(어원이 스케일)
+행렬의크기와 상관없이 모든원소에 일정한 상수를 곱하는것
+[3,2]  2배면  [6,4]
+[4,2]         [8,4]
+
+
+### 16)행렬과 회전,이동,스케일
+
+행렬의 곱이 어덯게 트랜스폼하고 연관되있는지 자세히 알아보도록함.
+행렬간의 곱은 내적의 조합으로 이야기할수 있고, 내적의 조합으로 취급할려면
+
+행렬의 행이 하나의 벡터, 열이 하나의 벡터로 취급할수 있다
+이런것과 마찬가지 컨셉으로 
+
+-=스케일  
+벡터를 하나의 행렬로 취급해서 보여줄수 있다.  
+1by2 2by2 는 곱할수 있음  
+
+(Y축으로 * 2)  
+[2,1][1,0]  
+     [0,2]  
+
+[2 * 1 + 1 * 0][2 * 0 + 1 * 2] = [2,2]  
+
+-=회전  
+(90도로 회전)  
+[2,1][0,1]  
+     [-1,0]  
+
+[2*0+1*-1][2*1+1*0] = [-1,2]  
+※아니 이런좋은게 있어? 이러니까 필요하는건구만
+
+![매트릭스의스케일회전](매트릭스의스케일회전.png)
+
+-=회전+이동
+행으로 되있는 벡터는 행벡터[1,2]
+렬로 표시되있는 벡터는 렬벡터[1]
+                           [2] 
+[2,1][0,1] + [2,-3]
+     [-1,0]
+[2 * 0 + 1 * -1][2 * 1 + 1 * 0]
+[-1,2] + [2, -3]
+[1, -1]
+
+![매트릭스회전이동1](매트릭스회전이동1.png)
+
+
+이러한 회전과 이동을 한번에 처리해줄수 있음
+
+[2,1,1] [0,1,0]
+        [-1,0,0]
+        [2,-3,1]
+[2 * 0 + 1 * -1 + 1 * 2][2 * 1 + 1 * 0 + 1 * -3][2 * 0 + 1 * 0 + 1 * 1] <=이부분을 곧장계산해서  
+[0 + -1 + 2][2 + 0 + -3][0 + 0 + 1]<=이렇게 만들어버리자  
+[1, -1, 1]
+
+x,y,z(2차원벡터에 한개더 붙여서 3차원을 만들고 새로만든 곳에 1을 붙여준다)
+[2,1] => [2,1,1] 붙여둔 1은 +스케일
+
+그러면 1by3 3by3이 되서 계산할수가 있게됨.
+
+3by3에서 
+1by1 ~ 2by2부분이 회전부분
+3by1 ~ 3by2부분이 이동부분
+
+1. 회전 2. 이동 
+![매트릭스회전이동2](매트릭스회전이동2.png)
+
+
+### 17)행렬과 트랜스폼
+
+여기서는 행렬 이동, 회전, 스케일이 유니티에서 어덯게 이루어지는 면밀히 살펴본다.
+
+유니티엔진은 3D엔진이라서 z까지 있어서 3차원으로 취급하고 처리됨
+
+그렇기떄문에 3차원 벡터를 다루어야되고
+매트릭스는 4by4 4차원벡터로 다루어져야됨.
+
+벡터를 행렬처럼 취급하면서  
+열벡터가 있고 행벡터가 있다고 했는데  
+마찬가지로 매트릭스행렬도 행기준, 렬기준이 있고  
+
+지금까지보여준건 행기준벡터로 이루어진 행기준 매트릭스였는데  
+유니티는 열기준매트릭스 열기준벡터를 다루게 된다.
+
+
+ x y z Pos  
+[0,0,0,0]  
+[0,0,0,0]  
+[0,0,0,0]  
+[0,0,0,0]  
+
+첫번째열은 X  
+두번째열은 Y  
+세번째열은 Z  
+네번째열은 position  
+x축의 방향, y축의 방향이 행렬이 기록되있다고 보면 된다.
+
+90도를 돌렸을떄
+x축 y축
+[0  1 2]
+[-1 0 3]
+[0  0 1]
+
+
+![유니티의매트릭스](유니티의매트릭스.png)
+
+
+3차원벡터를 취급하고 다루기 위해서는 4by4행렬이 필요함
+
+x축의 방향 y축의 방향 z축의 방향 위치  
+[0        1          0    2     ]  
+[-1       0          0    3     ]  
+[0        0          1    0     ]  
+[0        0          0    1     ]  
+
+※중요시 볼게 축의방향, 노말라이즈(0~1)사이에서 왔다갔다거림
+z회전할시 1by1, 1by2, 2by1, 2by2 쪽에 있는 구역들이 
+x회전할시 2by2, 2by3, 3by2, 3by3
+y회전할시 1by1, 1by3, 3by1, 3by3
+
+스케일을 변경하면  
+x => 1by1부분  
+y => 2by2부분  
+z => 3by3부분  
+여기값에 곱하기 
+
+위치를 변경하면
+Pos
+[x] => x방향
+[y] => y방향
+[z] => z방향
+[1]
+
+![유니티의매트릭스2](유니티의매트릭스2.png)
+
+### 18)행렬(matrix)의 기준. 열(column)vs 행(row)
+
+행기준 매트릭스
+열기준 매트릭스
+![행렬매트릭스](행렬매트릭스.png)
+
+행기준 열기준 선택적인거고 3D엔진에서는 반드시 정해준 룰은 없다  
+다이렉트x는 행기준이 기본값 
+OpenGL은 열기준이 기본값인데  
+고정사항이 아니라 선택사항이고  
+OpenGL, 유니티는 열기준이니까 열기준으로 설명을 함  
+
+※중요
+벡터(v) * 행렬(m) != 행렬(m) * 벡터(v)  
+같지 않고 교환법칙이 섭립이 안되서 곱하는순서가 중요함.  
+
+열기준 행렬은 벡터하고 매트릭스를 곱할떄 이런식으로 표현됨
+![벡터매트릭스곱](벡터매트릭스곱.png)
+
+※행기준 매트릭스 벡터 곱셈
+벡터가 앞, 매트릭스 뒤
+vector * matrix = result
+
+※열기준 매트릭스 벡터 곱셈(유니티는 이거 사용함.)
+매트릭스가 앞, 벡터가 뒤
+matrix * vector = result
+
+matrix4x4    vector4
+x y z pos(Local) 박스에 붙어잇는 독수리
+[0 1 0 2]       [2] => x
+[-1 0 0 3]      [1] => y
+[0 0 1 0]       [0] => z
+[0 0 0 1]       [1] => w
+            독수리의 월드위치
+0 1 0 2     [3]
+-2 0 0 3    [1]
+0 0 0 0     [0]
+0 0 0 1     [1]
+
+곱하는 방법은 같음
+
+4by4 4by1 계산가능
+![벡터매트릭스곱2](벡터매트릭스곱2.png)
+
+유니티의 오브젝트들은 종속관계로 계층구조로 이루어짐
+부모노드가 회전하면 자식한테도 영향을 미침
+이런식으로 3D공간에서, 계층구조공간에서 포지션, 로테이션, 스케일
+행렬연산에 의해서 결과가 반영됨.
+그래서 3D공간을 다룰때 이런행렬에 대해서 알고 있으면 트랜스폼에 대해  
+완벽히 이해하고 다룰 수 있게되는것이다
+
+
+### 19)삼각함수 덧셈정리 : 코사인편
+
+회전행렬에 대해서 다루어봄.  
+행렬가지고 이동, 스케일, 회전다루는걸 이야기했는데  
+그중 회전행렬을 좀더 자세히볼려고함  
+
+삼각함수에 대한 덧셈정리 외우는법
+1. 신코픈꽃신 sin(a+b) = sin(a)cos(b) + cos(a)sin(b)
+             sin(a-b) = sin(a)cos(b) - cos(a)sin(b)
+2. 고구마사소 cos(a+b) = cos(a)cos(b) + sin(a)sin(b)
+             cos(a-b) = cos(a)cos(b) - sin(a)sin(b)
+
+갑자기 삼각함수의 덧셈정리를 왜 말하냐 라면
+이 회전행렬을 구할때 삼각함수의 덧셈정리가 이용됨.
+행렬회전 구하기 이전에 삼각함수덧셈정리를 이해해야 가능하다
+
+P = (cos(a), sin(a))  
+각도는 a  
+
+q = (cos(b), sin(b))  
+각도는 b  
+
+p와 q사이의 각도를 theta라고 해두고  
+
+![삼각함수덧셈](삼각함수덧셈.png)
+
+
+-=z축 회전행렬
+[cos(theta) -sin(theta) 0]
+[sin(theta) cos(theta)  0]
+[0          0           1]
+내적의 정의에 대해 다시 이야기함
+
+벡터p, q의 내적은
+p의 길이 * q의 길이 * cos(theta)
+여기서 p,q의 길이를 = 1로 두면
+cos(theta)만 남고  
+
+cos(theta) == cos(a-b);  
+px * qx + py * qy == cos(a)cos(b) + sin(a)sin(b);  
+
+이렇게 내적의 공식자체가 삼각함수의 덧셈자체가 되는것이다.
+
+cos(a+b) = (cos(a-(-b))) == cos(a)cos(-b)+sin(a)sin(-b)
+
+r = 1이면
+-y/r    -y
+x/r     x
+
+
+cos은 x값이라 x값은 동일하다.
+cos(-theta) == cos(theta) 라 결과가 똑같다
+
+sin은 y이라 
+sin(-theta) == -sin(theta) 는 같은값으로 도출됨.  
+
+![삼각함수의덧셈정리코사인](삼각함수의덧셈정리코사인.png)
+
+다시보면
+cos(a+b) == (cos(a-(-b))) 
+== cos(a)cos(-b)+sin(a)sin(-b)
+
+코사인x는 동일한 값이 나오니까 -b => b로 만듬
+== cos(a)cos(b) + sin(a)sin(-b)
+
+사인-b의 부분이 앞으로 나오면서 변경
+== cos(a)cos(b) - sin(a)sin(b)
+
+
+### 20)삼각함수 덧셈정리 : 사인(sin)편
+
+sin(0) = 0
+cos(0) = 1
+
+sin(90) = 1
+cos(90) = 0
+
+90도 == PI/2;
+
+sin하고 cos하고는 90, Pi/2 만큼 차이가 남
+
+![사인코사인파](사인코사인파.png)
+
+sin(a+b) == cos(PI/2 - (a+b)) == cos(PI/2-a-b)
+=>(PI/2-a)-b) 이렇게 묶어서 계산
+=>cos(a-b) = cos(a)cos(b) + sin(a)sin(b) 이공식을 대입
+그러면 밑에 공식으로 변함
+
+== cos(PI/2-a)cos(b) + sin(PI/2-a)sin(b)
+=>여기서 PI/2 - a == sin(a), PI/2-a == cos(a)
+
+sin(a+b) = sin(a)cos(b) + cos(a)sin(b)
+sin(a-b) == sin(a-(-b))
+== sin(a)cos(-b) + cos(a)sin(-b)
+=>cos(-theta) == cos(theta)랑 같으니 이걸적용하면
+
+sin(a)cos(b) - cos(a)sin(b) 가 나옴
+
+그래서 삼각함수의 덧셈정리를 증명함
+※공식 4개다 해야지 증명이 되는것.
+
+
+####20230219
+### 21)회전 행렬
 
 
 
