--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1167,15 +1167,67 @@ sin(a)cos(b) - cos(a)sin(b) 가 나옴
 ※공식 4개다 해야지 증명이 되는것.
 
 
-####20230219
+####20230222
 ### 21)회전 행렬
 
+z축 회전행렬
+
+위치나 스케일보다 까리까리해서 회전행렬이 왜이렇게 나오는지 이해해보려고함
+
+Q의 각도는 b
+Q에서 P로 넘어가는 각도는 a
+
+P의 각도는 a+b가 될텐데, 최종적으로  
+P의 각도는 cos(a+b), sin(a+b)
+Q의 각도는 cos(b), sin(b)
+
+덧셈정리를 그대로 쓰면 된다
+Px == cos(a+b) == cos(a)cos(b) - sin(a)sin(b)
+Py == sin(a+b) == sin(a)cos(b) + cos(a)sin(b)
+
+=> Q의 x는 cos(b), y는 sin(b) 이면
+
+Px == cos(a)Qx - sin(a)Qy + 0 (의미없는 0을 더해봄)
+Py == sin(a)Qx + cos(a)Qy + 0 (의미없는 0을 더해봄)
+
+=> 이걸 행렬로 표현해보면
+
+[cos -sin 0][Qx] =  [Px]
+[sin cos  0][Qy] =  [Py]
+[0   0    1][1]  =  [1]
+
+이게 바로 Z축기준으로 회전을 한 회전행렬
+
+![Z축회전행렬](z축회전행렬.png)
 
 
+### 22)왼손 좌표계 vs 오른손 좌표계
 
+좌표계관련해서 이야기할려고함  
+좌표축이면 x, y, z 축이 있는데  
+각툴마다 x, y, y축의 방향이 다를다  
 
+이런건 크게 두가지로 나눌수있다.
+왼손 좌표계, 오른손좌표계
 
+![오지마술사](오지마술사.png)
 
+-=유니티는 왼손좌표계  
+모니터 너머가 Z  
+위로 향하는게 Y  
+우측으로 향하는게 X  
+
+x축이 오른쪽을 향하는지 (왼손)  
+y축이 왼쪽을 향하는지 (오른손)  
+
+프로그램마다 축이 다 다름.
+
+그래서 좌표계 왼손좌표계, 오른손좌표계 따지는게
+이 3D공간을 다룰때 중ㅇ요한 포인트가 되고
+이런점을 알고 있어야 행렬 내적 각가지 3차원공간을 다룰때 기반이되는 구역이다
+
+####20230223
+### 23)행렬의 형태들 Part1. 개념 설명
 
 
 
