--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1210,6 +1210,7 @@ Py == sin(a)Qx + cos(a)Qy + 0 (의미없는 0을 더해봄)
 이런건 크게 두가지로 나눌수있다.
 왼손 좌표계, 오른손좌표계
 
+#### -=오지마술사
 ![오지마술사](오지마술사.png)
 
 -=유니티는 왼손좌표계  
@@ -1222,9 +1223,9 @@ y축이 왼쪽을 향하는지 (오른손)
 
 프로그램마다 축이 다 다름.
 
-그래서 좌표계 왼손좌표계, 오른손좌표계 따지는게
-이 3D공간을 다룰때 중ㅇ요한 포인트가 되고
-이런점을 알고 있어야 행렬 내적 각가지 3차원공간을 다룰때 기반이되는 구역이다
+그래서 좌표계 왼손좌표계, 오른손좌표계 따지는게  
+이 3D공간을 다룰때 중요한 포인트가 되고  
+이런점을 알고 있어야 행렬 내적 각가지 3차원공간을 다룰때 기반이되는 구역이다  
 
 ####20230223
 ### 23)행렬의 형태들 Part1. 개념 설명
