--- a/choincnp/핵심 데이터 모델링/핵심 데이터 모델링.md
+++ b/choincnp/핵심 데이터 모델링/핵심 데이터 모델링.md
@@ -25,4 +25,4 @@
 ## ER 모델의 질적 특성
 * ### 완전성(Completeness)
     - ER 모델은 현실 세계의 모든 업무사항을 표현하고 있어야 한다.
-    - 요구사항에 대한 상세 내용이 ER 모델에 모두 표현되어 있는지, 
+    - 요구사항에 대한 상세 내용이 ER 모델에 모두 표현되어 있는지 찾아봐야 한다.
