--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -960,7 +960,7 @@ x,y,z(2차원벡터에 한개더 붙여서 3차원을 만들고 새로만든 곳
 마찬가지로 매트릭스행렬도 행기준, 렬기준이 있고  
 
 지금까지보여준건 행기준벡터로 이루어진 행기준 매트릭스였는데  
-유니티는 열기준매트릭스 열기준벡터를 다루게 된다.
+유니티는 열기준매트릭스, 열기준벡터를 다루게 된다.
 
 
  x y z Pos  
@@ -1227,43 +1227,137 @@ y축이 왼쪽을 향하는지 (오른손)
 이 3D공간을 다룰때 중요한 포인트가 되고  
 이런점을 알고 있어야 행렬 내적 각가지 3차원공간을 다룰때 기반이되는 구역이다  
 
-####20230223
+####20230225
 ### 23)행렬의 형태들 Part1. 개념 설명
 
+전치행렬(Transpose Matrix)
+직교행렬(Orthogonal Matrix)
+단위행렬(Identity Matrix)
+정방행렬(Square Matrix)
+역행렬(Inverse Matrix)
 
 
+여깃는 내용들을 다룬다면 몇시간을 다루어도 못다룸.
+수학을 배우는데 이유도 모르고 어디에 써먹는지도 모르는상태로 막배우는데  
+흥미도 떨어지고 이해도도 떨어질수 밖에 없는데,  
+저는 여러분들이 최대한 흥미도 가지고 이해할수 있게 초점을 맞출려고함.
 
 
+행렬같은경우 일반적인 로직에서는 사용하지않는데
+그래픽요소를 다룰때는 필수적으로 사용됨.  
+
+위에 보여준 항목들은 쉐이더를 다루기 위해서는 
+필수적으로 알아될 항목들이다.
 
 
+### 1. 전치행렬(Transpose Matrix)
+
+행벡터기준으로 되있다고 하면 이걸 열벡터기준으로 바꿔준다는것
+행과 열을 요소들을 바꿔주는것
+
+[x1 x2 x3]   [x1 y1 z1]
+[y1 y2 y3] =>[x2 y2 z2]
+[z1 z2 z3]   [x3 y3 z3]
+
+![전치행렬](전치행렬.png)
+
+### 2. 직교행렬(Orthogonal Matrix)
+
+일반적인 수학책 설명이 복잡하고 와닿지 않게 되있음.
+
+유니티에서 기즈모들이 직각으로 되있는데 각축들이 직교를 이루고 있는 형태를 의미한다.
+만약 트랜스폼로테이션을 3by3행렬로 나타낸다면 x, y가 직교,  y, z가 직교
+
+어덯게 회전하든간에 각축들은 서로간의 90도를 항상 유지함.
+
+※의미
+ㅗ => 직교
+ㄴ => 직각
+
+![직교행렬](직교행렬.png)
 
 
+### 3. 단위행렬(Identity Matrix), 항등행렬(옛날번역서 느낌)
+
+이렇게 된게 단위행렬이라고한다. 가운데부분만 1로 되있는, 단위행렬은 I라고 씀
+    [1 0 0 0]
+I = [0 1 0 0]
+    [0 0 1 0]
+    [0 0 0 1]
+
+하이어라키의 유니티 트랜스폼으로보면 이상태가 단위행렬상태라고 부른다.
+Position 0 0 0
+rotatation 0 0 0
+scale 0 0 0
+![단위행렬](단위행렬.png)
+
+### 4. 정방행렬(Square Matrix)
+행과 열의 갯수가 같은 행렬이 정방(정사각형)행렬이라고한다.
+정사각형 형태인 행렬이다.
+4by4 3by3 같은 정방행렬
+우리가 다루는 트랜스폼은 정방행렬이다라는걸 기억했으면 좋겠다.
+
+![정방행렬](정방행렬.png)
+
+### 5. 역행렬(Inverse Matrix)
+
+역행렬은 행렬의 역수같은 개념이다. (역수란 분자와 분모를 바꾼수)
+
+숫자 x라는게 있을떄, x의 역수는 x(-1) 1/x로 표현하는데
+
+x * x(-1) == x * 1/x == 1
+
+벡터 2,1 => 벡터3,1 로 이동시키고
+벡터 3,1 => 벡터2,1 로 이동시키는 관계
+
+[0  1 0 2][2] = [3]
+[-1 0 0 3][1] = [1]
+[0  0 1 0][0] = [0]
+[0  0 0 1][1] = [1]
+
+[0 -1 0  3][3] = [2]
+[1  0 0 -2][1] = [1]
+[0  0 1  0][0] = [0]
+[0  0 0  1][1] = [1]
+
+위와같은 관계를 역행렬이라고 함.
+![역행렬1](역행렬1.png)
+
+행렬의 역행렬은 -1을 붙여서
+m * m(-1) == I 로 표현을 함.
+
+어떤행렬 * 역행렬 == 단위행렬이 된다.
+마찬가지로 순서를 바꿔서 배치해도 단위행렬이 나온다.
+
+역행렬이라는건 어떤행렬이 트랜스폼을 나타낸다면 그행렬의 역행렬은 그트랜스폼을 돌려놓는 행렬을 의미한다.
+
+![역행렬2](역행렬2.png)
 
 
+### 24)행렬의 형태들 Part2. 유니티 코드 구현
 
 
+정방행렬이고 직교행렬일때는 
+회전값에 의한 역행렬과 전치행렬은 동일하다
 
 
+이동할때 문제가 생김.
+회전할때에 대한 이동값을 대입해야됨
+
+회전(+스케일)역행렬 * 이동역행렬 == 트랜스폼역행렬
+![유니티행렬구현](유니티행렬구현.png)
 
 
+이렇게 간단하게 구성할수 있는건 우리가 다루고 있는 트랜스폼 행렬이  
+정방행렬이고 직교행렬이기때문에 가능하다.  
+정방행렬이고 직교행렬과정 전제가 없어진다면 역행렬 구하는게 엄청 복잡해짐.  
 
+우리가 게임을 다룰때 그래픽스를 다룰때 정방행렬, 직교행렬이다라고 가정을 해도 크게 무리없다.  
 
+이번 비디오에서는 역행렬관련해서 많이 강조해서 말했는데. 역행렬이 많이 필요한개념이어서 그렇다.  
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+####20230226
+### 25)좌표변환/버텍스변환 - WVP transform. 쉐이더를 다루기 위해 필수적으로 알아야 하는 변환
 
 
 
