--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1359,19 +1359,109 @@ m * m(-1) == I 로 표현을 함.
 ####20230226
 ### 25)좌표변환/버텍스변환 - WVP transform. 쉐이더를 다루기 위해 필수적으로 알아야 하는 변환
 
+좌표변환(Coordinate Transformation)
+버텍스변환(Vertext Transformation)
+
+유니티에서 사물을 랜더링하기 위해선 메쉬가 존재하고 그메쉬가 씬에 배치되야되는데
+그씬에서 트랜스폼위치값을 가지고 월드포지션에 배치가 됨.
+
+World -> View -> Projection
+
+
+흔히 사용하는 메쉬에 대해서 이야기를 해야한다.
+
+도형이 생길려면 일단 점이 있고 점과 점사이가 연결되서 삼각형이 만들어지고
+삼각형들이 모여서 메쉬로 변함.
+
+점 => 버텍스(Vertices, Verts)
+선 => 에찌(Edge)
+폴리곤 => polygons(Polys)
+사전적의미는 다각형. 그래픽에서는 최소도형단위인 삼각형을 이용해서 폴리곤을 만듬.  
+그래픽스랑 게임에서 폴리곤이라는건 삼각형이라고 말함.  
+폴리곤을 이용해서 메쉬를 말함  
+도형 => 메쉬(Mesh)  
+
+![도형이생기는이유](도형이생기는이유.png)
+
+
+### Local Space / Model Space
+
+메쉬로 이루어진 모델들은 
+어떤 메쉬의 원점기준들의 버텍스위치들이 배치되있음
+어떤씬공간에 있기 이전에 메쉬자체에 존재해있음.
+
+
+### World Space
+이런메쉬 이런도형을 씬어딘가에 가져다 놓으면 이걸 월드스페이스라고함
+
+Transform.LocalToWorldMatrix => 이게 월드스페이스에 메쉬를 배치해주는 행렬
+
+월드스페이스에 오브젝트, 카메라들이 배치됨.
+오브젝트들이 각각각에 배치됨.
+
+메쉬에 있는 버텍스들이 이 LocalToWorldMatrix 와 곱해져서 월드스페이스 공간상으로 변해져서
+이동됨
+
+### View Space
+
+오브젝트들과 카메라가 월드스페이스에 위치하고 나면
+이걸다시 View Space로 바꿔줘야된다.
+
+카메라기준 공간.
+
+오브젝트를 봐라보는건 카메라를 위해서보는데  
+카메라를 기준으로 봐라봐야함
+
+camera.worldToCameraMatrix => 이게 뷰스페이스로 변환해주는 행렬
+
+Z축이 카메라 보는기준 반대로 배치되있는게 정상적인 배치이다
+
+### Projection Space
+ViewSpace까지 변환이 되면 Projection Space로 넘어가게됨.  
+camera.ProjectionMatrix를 곱해 최종적으로 투영을 거치게된다.  
+투영이라는 말은 이걸 실제모니터에서 봐라보는 모습, 실제 우리가 모니터를 봐라보고  
+랜더링되는 모습, 공간으로 배치된다보면됨.  
+
+Projection Space에서는 말그대로 투영작업을 하는데
+크게 두가지로 있다.
+1. 원근투영(Perspective Projection)
+흔히 3D에서 랜더링할떄 투영하는 기법이다.
+가까이 있는건 크게 보이고 멀리있는건 작게보이는데,
+대신 멀리있는건 한꺼번에 많이 보이게됨.  
+
+이런 우리눈에 실제로 작동하는 원근법을 적용해주는게 원근투영
+
+2. 직교투영(Orthographic Projection)
+직교투영은 이런원근법을 배제된 투영법
+게임쪽에서 쓰일떄는 2D게임에서 쓰임
+
+### 뷰행렬 (View Matric)
+
+
+뷰공간의 행렬은 기본적으로 카메라의 트랜스폼(행렬)의 역행렬이다.
+왜냐하면 오브젝트들이 카메라의 기준으로, 카메라의 상대적인 좌표로 변환이 되야되고
+카메라가 중심이 될려면 카메라의 트랜스폼의 역행렬을 적용하면 됨.
+
+유니티에서 보면 카메라를 올렸을때 앞에보이는 게임오브젝트는 반대로 내려가는 형태를 튐
+
+z축은 -붙여준상태로 해줘야된다. 왜냐하면 z축이 카메라가 봐라보는 방향이 아니라 
+카메라의 뒤쪽이 Z방향으로 바꿔야되기때문이다. 
+
+
+![뷰행렬](뷰행렬.png)
 
 
 
+### 26)프로젝션 행렬 part.1
 
+유니티에서 기본적으로 카메라를 다룰때는 프로젝션이 적용된 상태로 작업하고 있다.
 
+유니티 카메라컴포넌트를 보면 투영부분을 고를수 있음
 
-
-
-
-
-
-
-
+씬상에서 카메라 앞에 네모부터 큰곳의 네모를
+ClippingPlanes 의 
+Near (0.3 가깝게)
+Far 
 
 
 
