--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1489,28 +1489,136 @@ NDC는 좌표공간이 111, -11, 등 1으로만 되있어서 단위화된 장치
 ![원근투영행렬](원근투영행렬.png)
 
 
-4:38
-그래서 이 원근투영행렬은 
+####20230301
+그래서 이 원근투영행렬은 조금 복잡함
+
+[2n/r-l 0        r+l/r-l    0         ]
+[0      2n/t-b   t+b/t-b    0         ]
+[0      0        -f+n/f-n   -2fn/f-n  ]
+[0      0        -1         0         ]
+
+이 투영행렬은 뷰스페이스로 변환되고 나서 전환됨.
+r+l/r-l = 0
+t+b/t-b = 0
+l = -3, r = 3
+t = 2 ,b = -2
+그래서 일반적으론 0이 나온다.
+
+![원근투영행렬2](원근투영행렬2.png)
+
+### 27)프로젝션 행렬 part.2
+
+우리가 확인해줘야될곳은 1by1, 2by2, 3by3, 3by4
+
+![투영행렬에서봐야될부분](투영행렬에서봐야될부분.png)
+
+
+[1 0 0  0][x] [x]
+[0 1 0  0][y] [y]
+[0 0 a  b][z] [az + b]
+[0 0 -1 0][1] [-z]
+
+![N D C공간](NDC공간.png)
+
+m == 아래의 행렬
+[1 0 0  0]
+[0 1 0  0]
+[0 0 a  b]
+[0 0 -1 0]
+
+m * v(0,0,-n,1)  == (0, 0,-an + b, n)
+=> (0,0,-an + b/n) 
+
+//n = near = -1 일때
+(0,0,-an + b/n) => (0,0,(-a)(-1)/-1)
+== (0,0,-1)
+
+m * v(0,0,-f,1) == (0,0,-af+b,f)
+=>(0,0,-af+b/n) 
+
+//f = far = 1 일떄
+(0,0,-af+b/n) => (0,0,(-a)1+b/1)
+== (0,0,1)
+
+
+![N D C공간행렬적용](NDC공간행렬적용.png)
+
+-an + b = -n => an = n + b  
+
+-af + b = f => af = -f + b  
+
+af - an == a(f-n) 로 변환가능  
+=> a(f-n) == -f + b - (n + b) == -f -n //b는 사라지고 남음  
+a(f-n) == -f - n  
+a == -(f + n)/f-n  
+
+a가 행렬 3by3위치에 들어감  
+
+
+//a는 위에 나온값 a  
+b == an - n == n (-(f + n)/f-n)) - n  
+
+//n이 공통적으로 있으니까. 묶기
+n(-(f + n)/f-n) - 1) == n(-(f + n)/f-n) - f-n/f-n)  
+//공통적으로 보이는걸 묶으면 아래처럼 나옴  
+=> b = -2fn/f-n  
+
+b가 행렬 3by4로 들어감  
+
+![N D C공간행렬적용2](NDC공간행렬적용2.png)
+
+
+### 28)프로젝션 행렬 part.2
+
+a, b 부분을 구하는 영상
+
+a => x축
+b => y축
+
+좌측상단 좌표기준 (0,1,1)
+
+tan == y/x == 기울기
+
+b == 1/ (tan(theta)/2) == 2n/t-b
+
+btan(theta) == 1;
+
+![투영행렬3 1](투영행렬3_1.png)
+
+
+n = width
+t = height
+
+tan(t/n) = t-b/2n =
+
+y축 == 2n / t-b; == b (matrix 2by2)
+x축 == 2n / r-l == a (matrix 1by1)
+![투영행렬3 2](투영행렬3_2.png)
+
+투영은 복잡해보이는데 하나하나 따져보면 이렇게 이해할수 있다.
+
+정리하면 
+월드 뷰 프로젝션 (WorldViewProjection) 트랜스폼
+모델 뷰 프로젝션 (ModelViewProjection) 트랜스폼
+
+모델, 로컬스페이스에서 월드스페이스로 변환해주고
+이걸 다시 카메라기준 뷰스페이스 기준으로 변환해주고
+그리고 프로젝션(투영)으로 변환해줌
+
+이런 변환 과정을 버텍스 쉐이더에서 수행하고
+이런 트랜스폼을 거치고 나서 픽셀쉐이더로 넘어가서 랜더링이되고 쉐이딩이 됨.
+
+MVP WVP
+유니티에서 혼합하여 사용함
+
+ClipSpace = NDC 공간안의 포지션
 
 
 
+### 29)투영행렬(projection matrix) 조작
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+####20230302
 
 
 
