--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1620,9 +1620,24 @@ ClipSpace = NDC 공간안의 포지션
 
 ####20230302
 
+View Matrix와 Projection Matrix를 유니티에서 코드로 보는 영상
+
+![투영행렬코드1](투영행렬코드1.png)
+ 
+
+
+같은거 확인
+![투영행렬코드2](투영행렬코드2.png)
 
 
 
+프로젝션 매트릭스를 사용해서 어질어질 흔들리는 카메라 효과를 구현하는 코드
+![어질어질흔들코드](어질어질흔들코드.png)
+
+
+### 30)행렬식(determinant) = 변환의 크기
+
+####20230303
 
 
 
