--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1637,12 +1637,42 @@ View Matrix와 Projection Matrix를 유니티에서 코드로 보는 영상
 
 ### 30)행렬식(determinant) = 변환의 크기
 
-####20230304
+####20230309
+
+행렬m이 이렇게 되있으면
+
+m = [a b]
+    [c d]
+
+m == det(m) == det(a b) == ad - bc (행렬식의 결과)
+                  (c d)
+
+![행렬식](행렬식.png)
+
+게임에서 특히 그래픽적으로 필요한것은 외적.
+
+행렬을 트랜스폼(변환)으로 다루었는데.  
+행렬식은 크기로 봄.  
 
 
+행렬에 대한 변환량의 크기를 나타낸다.
 
 
+![행렬식2](행렬식2.png)
 
+
+ ad - bc => (a+b)(c+d) - 2bc - bd - ac
+         => ac + ad + bc + bd - 2bc - bd - ac
+
+2차원
+[a b]
+[c d]
+=> ad-bc
+
+
+### 31)벡터의 외적(cross product)의 정의와 특징, 그리고 행렬식
+
+####20230310
 
 
 
