feat.20230313 수포자 마무리

--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1672,15 +1672,63 @@ m == det(m) == det(a b) == ad - bc (행렬식의 결과)
 
 ### 31)벡터의 외적(cross product)의 정의와 특징, 그리고 행렬식
 
-####20230310
+####20230312
+
+영어는 크로스프로덕트.
+영단어 크로스에서 유측할수 있듯이
+
+벡터에 외적하면 교차된 벡터가 나오게됨
+
+유니티에서 사용하고 있는 좌표측 화살표를 이해하면 빠를거 같다
+
+y * z = x
+z * x = y
+x * y = z
+
+외적, 내적같은경우 둘다 벡터의 곱셈인데
+내적같은경우 교환법칙이 성립이 되지만.
+곱하는 순서가 상관없음
+
+외적같은경우 곱하는 순서가 있음.
+교환법칙X
+
+서로 곱했을때 나오는벡터의 방향이
+유니티는 왼손법칙을 사용.
+외적나오는 방향도 왼손법칙을 사용.
+서로순환됨
+
+![벡터의외적](벡터의외적.png)
+
+a = (a1,a2,a3)
+b = (b1,b2,b3)
+
+a * b = (a2b3 - a3b2, a3b1 - a1b3, a1b2 - a2b1)
+
+a * b = det
+[i  j  k ]
+[a1 a2 a3]
+[b1 b2 b3]
+
+외적의 결과식은 행렬식으로 쉽게 접근가능
 
 
+두벡터모두에게 직교가됨
+
+####20230313
+
+### 어디에 쓰는지 사용처관련체크
+
+#### 내적은 앞인지 뒤인지에 사용
+
+앞 1  
+뒤 -1
+
+#### 외적은 우측인지 좌측인지에 사용(float로 할시)
+우측 1
+좌측 -1
 
 
-
-
-
-
+## 마무리됨.(복습하기)
 
 
 
