--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1733,6 +1733,82 @@ a * b = det
 
 
 
+## 신규 공부 
+### 20230325
+
+수포자를 다봣으니 프로젝트를 진행하면서 골때렷던거를 공부해보자
+
+https://youtu.be/nMhMP01m1xo
+
+
+벡터
+크기와 방향을 가지는 물리적 양
+화살표로 크기와 방향을 모두나타낸다
+
+ 
+![벡터](벡터.png)
+
+
+이리저리 생각했을때 제일 간단한 방법을 생각해보자
+벡터는 수없이 숫자를 늘릴수 있다
+vector2, vector3, .... vector11
+
+제일 작은거로 하자
+vector1 => 1개짜리
+
+방향 + 크기 = 타겟좌표 - 현재좌표 
+
+vector1은 즉 숫자한개만 있는 상태다. 이걸 염두해두고 처리하자면
+vector1 dir = vector(a) - vector(b);  
+
+vector1을 쉽게 x축만 있다고 보자  
+그럼 각 변수에 대입해보자  
+a = 1,b = 0;  
+1 = 1 - 0;
+
+x축으로 1을 방향과 크기만큼 움직인다  
+이제 이상태로 vector2로 적용하자면  
+a = vector(2,3), b = vector (1,1)  
+1,2 = (2,3) - (1,1)
+
+
+
+벡터의 내적(스칼라)
+
+x, y = x*y cos(delta)
+
+x = x1, x2
+y = y1, y2 
+== (x1y1 + x2y2) cos(delta)
+
+두벡터의 내적으로 벡터사이의 각을 알수 있따
+-1 <= cos <= 1 임
+
+
+
+
+
+# 쿼터니언
+
+https://youtu.be/d4EgbgTm0Bg
+
+![쿼터니언 투스테이트](쿼터니언_투스테이트.png)
+
+
+최대 0 ~ 1 구역
+i j k
+
+
+1.00, 0.00i, 0.00j, 0.00k
+
+-=실수  
+실제로 존재하는 수 RealNumber  
+-=허수  
+실제 존재하지 않는 가짜수. imageinary number  
+-=복소수
+가장넓은 수의 체계이며, 더는 새로운 수를 공부하지 않아요. 수의 체계는 마지막 이죠   
+실수와 허수가 섞여 있는 수. 두실수 a,b와 허수단위i 를 이용해서 a+bi 형태의 수를  
+만들수 있는데 이게 복소수
 
 
 
@@ -1743,11 +1819,11 @@ a * b = det
 
 
 
+https://youtu.be/AAp6ipIMooo
 
 
 
-
-
+![쿼터니언실수부허수부](쿼터니언실수부허수부.png)
 
 
 
