--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1830,3 +1830,37 @@ https://youtu.be/AAp6ipIMooo
 
 
 
+
+
+![4By4](4by4.png)
+
+
+
+![3By3](3by3.png)
+
+회전이라는건 위치값 이동
+회전도 어떤 축에 대한 이동
+
+
+
+
+모든건 단위원에서 비롯된다
+단위원은 반지름이 1인 원이다
+
+
+삼각형의 빗변은 1이다
+sin = y 
+cos = x
+
+y축을 안건드리면 y축의 회전
+
+
+
+![축회전](축회전.png)
+
+
+![체크](체크.png)
+
+
+좌표축에 대한 위치떄문에 다이렉트를 사용하는것
+
