--- a/lLcrowe/그림공부.md
+++ b/lLcrowe/그림공부.md
@@ -222,5 +222,66 @@ https://youtu.be/DjQww9X0BaQ
 내가 뭘 잘하고
 내가 어떤사람인 탐구를 많이 해봐야됨
 
+근데 그과정에서 다른 작가님 스타일 따라가는것도 좋아요.
+
+장르별로 팔요한게 있다
+
+내시간을쪼개고 내잠을 줄려서 내포트폴리오를 업그레이드해야된다
+
+업그레이드 하기 위해서는 결국 기본으로 돌아가야됨
+인체 형태 빛 
+내가 그림이 막힌다?
+그럼 기본 쌓았던걸 다 써먹었다는거예요
+다시 기본기 쌓으러 돌아가야해요.
+
+다시 기본기 쌓으러가서 크로키 다시하고
+크로키에 다가 이제 그동안 공부를 더했던게 있으니까
+색채 빛 이런걸 더 잘 넣어보려고 노력해보고
+
+
+## 자신의 그림 스타일을 만드는 방법
+https://youtu.be/bhkrItPbuVk
+
+자기스타일에 대한 고민
+
+저도 그고민을 진짜 오래한거 같다 10몇년한거 같다
+스타일 골라서 간다고 생각하는데
+선택은 사실 별거 아님
+중요한건 상당히 오랫동안 기본적인방식에 의해서 스타일이 정해짐
+
+이미 있는 스타일 => 따라갈 스타일을 고르는 질문
+내스타일을 찾기위해서는 내가뭘잘하고  내가 어떤사람인지 탐구를 하면서
+다른 작가 스타일을 탐구하느것도 좋다(배울게있다)
+
+과정에서 깨닫게 되는게 뭐냐면 어떠한 지점으로 가다보면
+나자신이 어떠한 사람인 내가 뭘좋아하는지 알게되는것이다
+시간이 필요하다. 뭘그릴지 모르겠어 해도 뭘해봐야된다.
+
+안해보고 고민해보는것보다는 자료를 찾아서 빡세게 그려보고
+막히고 잘되는 부분이 있고 궁금한 부분들이 구체적 질문이 나온다
+
+그림이라는게 계속 신선하게 바꾸니까
+
+감각적인 면, 테크닉적 면
+
+부끄러워하는순간 정체될것이다.
+
+그림 전체적인 맥락에서는 기본기.
+
+
+
+## 좋아하는 그림을 내 그림으로 만드는 방법
+https://youtu.be/96u6PiQgqc8
+
+내가 좋아하는 그림.  
+그리고 내가 최종적으로 목표하는 하고 싶은 그림. (되고 싶은 그림)
+그리고 그과정에서 내가 해야할 그림.     
+
+이거 세가지를 50장을 모아 오라고 해요.
+
+이걸 토대로 내 취향과 내 방향성에 대해서
+스스로 한번 점검을 하라고 말씀을 드리거든요.
+
+
 
 
