--- a/yarogono/F-lab/Java/13주 차/영속성 컨텍스트.md
+++ b/yarogono/F-lab/Java/13주 차/영속성 컨텍스트.md
@@ -25,10 +25,25 @@ JPA에서 엔티티 객체의 상태를 관리하며, 엔티티 객체와 데이
 ## 영속성 컨텍스트의 이점
 
 - 1차 캐시
-- 동일성 보장
+    - 1차 캐시는 객체를 데이터베이스에서 가져올 때 사용되면,
+      성능을 향상시키는 데 기여한다.
+    - 만약 같은 엔티티가 여러 번 요청될 경우, 데이터베이스에 접근하지 않고 캐시에서 객체를 가져올 수 있다.
+- 동일성(identity) 보장
+    - 엔티티 객체의 동일성을 보장한다.
+    - 같은 식별자를 가지는 엔티티 객체는 항상 같은 인스턴스를 반환합니다.
+      ⇒ 객체지향적인 설계와 개발이 가능하다.
 - 트랜잭션을 지원하는 쓰지 지연(transactional write-behind)
+    - 변경된 내용을 데이터베이스에 바로 반영하지 않고,
+      변경 내용을 메모리나 캐시에 보관하여 나중에 한꺼번에 데이터베이스에 반영하는 것을 말한다.
+    - 이를 통해 데이터베이스 접근 횟수를 줄이고, 성능을 향상시킬 수 잇다.
 - 변경 감지(Dirty Checking)
+    - 객체를 추적하면서 변경된 객체를 자동으로 감지한다.
+    - 객체가 변경될 때마다 데이터베이스에 자동으로 업데이트되며,
+      변경된 객체만 데이터베이스에 업데이트되므로 성능을 향상 시킨다.
 - 지연 로딩(Lazy Loading)
+    - 지연 로딩은 필요한 시점에만 연관된 엔티티를 로딩하여 메모리 사용량을 최적화하는 기능입니다.
+    - 이 기능은 영속성 컨텍스트를 사용하여 구현됩니다.
+    - 연관된 엔티티가 필요한 경우, 영속성 컨텍스트에서 먼저 로딩을 시도하고, 로딩된 엔티티를 사용합니다.
 
 ## ❓영속성 레이어(PErsistence Layer)란?
 
