--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -248,23 +248,113 @@ I 단위행렬
 0 영행렬
 K, I는 스칼라
 
-※주의해야될건 곱셈의 첫번쨰 규칙이다.
 
+1)덧셈법칙
+1. a+b == b+a
+2. (a+b)+c == a+(b+c)
+3. a+0 == 0+a == a
+4. a+(-a) == 0
+
+2)스칼라의 곱법칙
+1. (k+i)a == ka+ia
+2. k(a+b) == ka+kb
+3. (ki)a == k(ia)
+4. (-1)a == -a
+5. 0a == 0
+
+3)곱셈 법칙
+1. ab != ba  (실수나 유리수는 가능하지만. 행렬은 불가능)
+2. a(bc) == (ab)c
+3. a(b+-c) == ab+ac
+4. (a+-b)c == ac+-bc
+5. ai == ia == a
+6. k(ab) == (ka)b == a(kb)
+7. 정방행렬 A에 대하여  
+a(0제곱) == i
+a(1제곱) == a
+a(n+1제곱) == a(n제곱)a
+a(m제곱)a(n제곱) == a(m+n제곱)
+
+※주의해야될건 곱셈의 첫번쨰 규칙이다.
 
 #### 행렬식
 
+판별식(determinant)
+
+행렬식은 모든 행렬에 대해 존재하는것이 아니라 행과 열의 수가 같은 정방행렬에서만 구할수 있으며
+우리는 정방행렬 A에 대한 행렬식을 다음과 같이 표시한다.
+detA == det(A) == |A|
+
+행렬식을 계산하기 위해 필요한 두가지 개념을 알아보자
+1. 소행렬식
+
+2. 여인자(cofactor)
 
 
+음.. 쉽게 말하면 3by3 행렬일때
+
+a11a22a33 + a12a23a31 + a13a21a32 -a11a23a31 -a12a21a33 -a13a22a31 == 3by3 정방행렬의 행렬식
+
+\ 이방향으로 곱하고 더하기 3번
+/ 이방향으로 곱하고 빼기 3번
 
 
+※ 사다리꼴의 면적
+(밑변의 길이 + 윗변의길이) * 높이 / 2 == 사다리꼴의 면적
+
+#### 역행렬(inverse matrix)
+역행렬은 정방행렬에 대해서만 존재하고 다음조건을 만족시키는 행렬을 의미한다.  
+aa(-1제곱) == a(-1제곱)a == i  
+
+그러나 정방행렬이라고 해서 모두 역행렬이 존재하는것은 아니다.  
+역행렬이 존재하는 행렬 == 가역(invertible)행렬  
+역행렬이 존재하지 않는 행렬 == 특이(singular) 행렬  
+
+## 3. 변환(트랜스폼인듯)
+변환은 게임그래픽스에서 2가지목적으로 사용된다.  
+1. 정점의 위치벡터를 이동  
+2. 방향벡터의 자세를 변화시키는데에 사용 (각도)  
+
+게임에서 변환은 공간상에서 물체의 위치 방향 이동등을 표현하기 위해 사용되는 핵심적인 기능을 수행한다.  
+
+이동변환 : 한점의 위치만 이동시키는 변환  
+자세&회전변환 : 어떤선이나 방향을 이동시키는것(각도)  
+
+### 좌표계(coordinates)
+좌표계는 하나의 기준이다. 변환을 수학적으로 설명하기 위해서는 기준인 좌표계가 있어야하며,  
+이좌표계를 통한 좌표로 변환을 서술해야한다.
+
+#### 직교좌표계
+가장 일반적으로 사용하는 좌표계.  
+3개의 실수값으로 좌표를 표현
+
+#### 원기둥좌표계
+원기둥에서 좌표계를 표현하는 방법
+
+※공식
+직교좌표계 
+x, y, z
+원기둥좌표계
+rcos(theta), rsin(theta), z
+
+#### 구면좌표계
+지구본에서 쓰는 그거
 
 
+#### 이동 변환
+기본적으로 하나의 좌표를 이동시키는것
+물체의 방향은 변환하지 않는것.
 
 
+#### 회전 변환
+이동변환은 각 좌표축에 대한 이동크기를 더해줌으로써 수행되는데 비해  
+회전 변환은 주어진 각도만큼 `회전축`을 기준으로 회전하는 변환이다.
 
+※2차원 평면회전
+[x] = [cos -sin][x]
+[y]	  [sin  cos][y]	
 
-
-## 3. 변환
+※2차원평면회전의 3차원확장
 
 
 ## 4. 사원수
