--- a/lLcrowe/그림공부.md
+++ b/lLcrowe/그림공부.md
@@ -273,15 +273,32 @@ https://youtu.be/bhkrItPbuVk
 ## 좋아하는 그림을 내 그림으로 만드는 방법
 https://youtu.be/96u6PiQgqc8
 
-내가 좋아하는 그림.  
-그리고 내가 최종적으로 목표하는 하고 싶은 그림. (되고 싶은 그림)
-그리고 그과정에서 내가 해야할 그림.     
+1. 내가 좋아하는 그림.  
+2. 내가 최종적으로 목표하는 하고 싶은 그림. (되고 싶은 그림)
+3. 그 과정에서 내가 해야할 그림.     
 
-이거 세가지를 50장을 모아 오라고 해요.
-
+이거 세가지를 50장을 모아 오라고 해요.(150장)
 이걸 토대로 내 취향과 내 방향성에 대해서
 스스로 한번 점검을 하라고 말씀을 드리거든요.
 
+026보기
 
 
+
+
+
+## 로마나 선생님 발상과 공부법 방송
+
+-=1. 드로잉 -> 사물에 대한 모작  
+A 무작정따라그리기  
+B 그것이 왜 그렇게 되는지  
+C 어덯게 해야 매력적이게 되는지  
+
+동세가 딱딱해주지는 이유
+1.인체해부학에 대한 이해도
+2.보조선 활용도
+3.그려보지 않은 자세
+
+
+3:12:32 디자인발상
 
