--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -189,13 +189,13 @@ m행 n열
 
 #### 전치행렬
 행을 열로 자리바꿈하거나 열을 행으로 자리바꿈한것.
-A행렬이
+A행렬이  
 [2 7 -4]  
 [1 6 -1]  
-이면 전치행렬일 경우
-[2 1]
-[7 6]
-[-4 -1]
+이면 전치행렬일 경우  
+[2 1]  
+[7 6]  
+[-4 -1]  
 
 ### 행렬 연산
 #### 행렬덧셈
@@ -350,11 +350,87 @@ rcos(theta), rsin(theta), z
 이동변환은 각 좌표축에 대한 이동크기를 더해줌으로써 수행되는데 비해  
 회전 변환은 주어진 각도만큼 `회전축`을 기준으로 회전하는 변환이다.
 
-※2차원 평면회전
-[x] = [cos -sin][x]
-[y]	  [sin  cos][y]	
+※회전행렬
+[cos -sin]
+[sin  cos]
 
-※2차원평면회전의 3차원확장
+
+※2차원 평면회전  
+[x] = [cos -sin][x]  
+[y]	= [sin  cos][y]	
+
+※2차원평면회전의 3차원확장  
+매트릭스가 한개더 늘어난다  
+3by3
+
+xy평면상에서 z축기준으로 회전  
+
+[cos -sin 0]  
+[sin  cos 0]  
+[ 0    0  1]  
+
+
+xz평면상에서 y축기준으로 회전  
+
+[cos   0 sin]  
+[0     1  0 ]  
+[-sin  0 cos]  
+
+
+yz평면상에서 x축기준으로 회전  
+
+[1  0    0 ]  
+[0 cos -sin]  
+[0 sin  cos]  
+
+※ 주의해야될거  
+축기준 행렬은 단위행렬로 대체됨
+y축기준일시 회전행렬이 뒤집힘(전치행렬이라고 봐야되나?)
+
+#### 3차원 공간 회전
+##### 1) 변환의 연결
+회전 변환 행렬을 서로 곱하면 원하는 회전 변환을 수행할수 있다  
+3차원 좌표 vector를 x축 기준 30도, y축기준으로 60도 회전시킬려면  
+
+ry(60) rx(30)  =>
+
+[cos60  0 sin60][1  0      0   ][vectorx]  
+[0      1  0   ][0 cos30 -sin30][vectory]  
+[-sin60 0 cos60][0 sin30  cos30][vectorz]  
+
+※ 주의해야될거 
+x축으로 30도 회전하면 좌표축 전체가 이동하기 때문에 y축의 위치도 바뀐다는 점이다.  
+따라서 y축 기준으로 60 회전하는 회전축은 x축에 대한 회전변환이 반영된 좌표축을 기준으로 수행된다.  
+따라서 회전 변환행렬을 곱하는 순서에 따라 변환된결과가 다르다는것을 명심하기.
+
+
+##### 2) 오일러변환
+오일러 변환(The Euler Transfrom)은 회전 변환 행렬이나 좌표축의 자세를 표현하는 매우 직관적인 방법이다.  
+x,y,z축을 각각 회전축으로 했을때 각회전축에 대한 회전각으로 3차원 공간회전 변환행렬을 정의한다.  
+
+오일러변환에는 여러가지 방법이 있지만, 이책에서 가장 많이 사용되는 ZYX 오일러변환에 대해 이야기하면
+ZYX 오일러변환은 z축으로 a, y축으로 b, x축으로 c만큼 회전시킨 각각의 회전행렬을 곱함으로서 이루어지기때문에  
+붙여진 이름이다.
+
+[cosa -sina 0] [cosb   0 sinb] [1  0    0 ]
+[sina  cosa 0] [0      1  0  ] [0 cosc -sinc]
+[ 0    0    1] [-sinb  0 cosb] [0 sinc  cosc]
+
+
+
+
+
+#### 회전행렬의 성질
+
+
+
+
+
+
+
+#### 회전행렬의 성질
+
+
 
 
 ## 4. 사원수
