--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -417,18 +417,36 @@ ZYX 오일러변환은 z축으로 a, y축으로 b, x축으로 c만큼 회전시킨 각각의 회전행렬을 
 [ 0    0    1] [-sinb  0 cosb] [0 sinc  cosc]
 
 
-
-
-
 #### 회전행렬의 성질
 
 
+회전행렬끼리의 곱은 회전행렬
+RT(theta) = R-1(theta)
+
+
+### 크기변환
+
+지금까지 설명한 이동변환과 회전 변환은 위치와 방향만 바뀔뿐 기하적 형상의 길이나 사잇각등은 변화하지않는다.
+
+이동변환, 회전변환은 각 사각형의 꼭지점간 거리가 일정하게 유지되고 모서리간 각도가 직각으로 변함이 없었다.
+이러한 변환을 강체변환(rigid body transformation)
+
+여기서 설명할 변환은 기하적 형상의 길이와 사잇각이 유지되지 않는 비강체 변환의 일종인 크기변환.
+
+크기변환행렬
+a => x축으로 방향으로 a배
+b => y축으로 방향으로 b배
+c => z축으로 방향으로 c배
+
+[a  0  0][x]    [ax]
+[0  b  0][y] =  [by]
+[0  0  c][z]    [cz]
 
 
 
+### 동차 좌표계
 
 
-#### 회전행렬의 성질
 
 
 
