--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -446,6 +446,34 @@ c => z축으로 방향으로 c배
 
 ### 동차 좌표계
 
+세개의 변환을 한꺼번에 표현할수 있는 동차좌표계(homogenoues coordinate)
+
+P, Q 가 있고 점인지 벡터인지 알려고 w값에 따라 변경
+
+w = 1 => 점
+p	[px]
+	[py]
+	[pz]
+	[w]
+
+v	[vx]
+	[vy]
+	[vz]
+	[0]
+
+
+w = 0 => 벡터
+
+이동행렬 = 더하기
+회전행렬 = 곱하기
+크기행렬 = 곱하기
+
+
+### 좌표계의 변환
+1. 월드좌표계와 로컬좌표계
+
+
+
 
 
 
