--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -470,16 +470,56 @@ w = 0 => 벡터
 
 
 ### 좌표계의 변환
-1. 월드좌표계와 로컬좌표계
+1. 월드좌표계와 로컬좌표계  
+3d프로그래밍에서는 좌표계를 기준으로 변환을 수행한다.  
+하나의 좌표계에서 여러물체를 표현하는것보다는 여러개의 좌표계상에서 각각의 물체를 표현하는게 더 편리하기 때문이다.  
+
+2. 좌표계의 변환  
+※이동행렬  
+[1  0  0 dx]  
+[0  1  0 dy]  
+[0  0  1 dz]  
+[0  0  0 1 ] 
 
 
 
+※동차 변환행렬  
+
+3번을 1번으로 변환할려는 행렬. 2번행렬이 동차 변환행렬이다.
+2번행렬 == G행렬
+
+[apx]   [1  0  0 dx][bpx]  
+[apy] = [0  1  0 dy][bpy]  
+[apz]   [0  0  1 dz][bpz]  
+[1]     [0  0  0 1 ][1]  
+
+1번		2번			3번  
+
+아무런변환도 수행되지 않는 다음과 같은 행렬을 단위 행렬이라고 한다.  
+이동행렬은 동차 변환행렬의 한 경우이다.  
+
+동차 좌표계에서 표현한 회전 변환의 경우, 순수회전이므로 동차 변환행렬의 이동크기는 (x,y,z) 0이 된다.  
+
+※변환의 연결
+지금까지 설명한 이동과 회전의 기본변환을 곱해서 여러 변환들을 생성할수 있다.  
 
 
 
-
+지금까지 설명한 내용들은 최종적으로 동차변환을 설명하기 위한것이다.  
+4x4행렬의 동차변환을 기본변환행렬로 사용된다.
 
 ## 4. 사원수
+
+사원수란 하나의 스칼라와 하나의 3차원벡터를 하나로 묶어서 4개의 요소로 구성된 복소수(complex number)의 일종이다.  
+4개의 구성요소를 갖고 있다.  
+
+쿼터니언 == (sq, vq) == (w,a,b,c)
+
+스칼라 == w
+
+
+
+
 
 
 ## 5. 기하학
