--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -511,11 +511,111 @@ w = 0 => 벡터
 ## 4. 사원수
 
 사원수란 하나의 스칼라와 하나의 3차원벡터를 하나로 묶어서 4개의 요소로 구성된 복소수(complex number)의 일종이다.  
-4개의 구성요소를 갖고 있다.  
+4개의 구성요소를 갖고 있다. 하나는 스칼라, 나머지 세개는 3차원벡터를 구성.
 
 쿼터니언 == (sq, vq) == (w,a,b,c)
 
 스칼라 == w
+
+
+#### 사원수의 연산  
+사원수는 벡터의 확장 개념이므로 벡터연산에 사용했던 일반적인 대수법칙이 그대로 적용됨
+
+1. 사원수의 덧셈  
+벡터의 덧셈처럼 각각의 요소를 더하면 됨
+
+2. 사원수의 뺄셈
+각각의 요소를 빼면 됨
+
+3. 사원수의 스칼라 곱
+크기를 곱하는거니 
+사원수의 각요소에다 스칼라를 곱하기
+
+4. 사원수의 곱셈
+사원수는 공간의 회전변환을 표현하는데 사용한다고 여러번 이야기했다.  
+회전변환시 변환의 연결은 여러개의 회전변환행렬을 곱함으로서 얻을수 있다.  
+
+공간회전변환을 표현하는 사원수 또한 곱셈으로서 변환의 연결이 수행된다.  
+사원수를 이용한 변환의 연결 또한 회전 변환 행렬을 통한 변환 연결과 마찬가지로  
+곱하는 순서가 매우중요하며, 곱셈의 교환 법칙이 성립하지 않는다.  
+
+사원수가 복소수의 일종이라고 했는데, 사원수의 곱셈은 복소수의 성질을 이용해서 수행된다.
+
+
+ij=k	ij=k	ki=j
+ji=-k	kj=-i	ik=j
+i^2=-1	j^2=-1	k^2=-1
+
+여기서 첫째줄과 둘째줄은 벡터의 외적에서 i,j,k의 관계와 유사하다.
+
+따라서 전개법칙을 적용하여 사원수의 곱셈을 정리하면 다음과 같다  
+pq = p(d + ai + bj + ck) * q(d + ai + bj + ck)
+
+5. 사원수의 교환, 결합법칙
+덧셈의 교환법칙 성립  
+p + q = q + p  
+
+덧셈의 결합법칙 성립  
+(p + q ) + r = p + (q + r)  
+
+스칼라곱 교환법칙 성립
+Sq = qS
+
+곱셈의 교환법칙이 성립하지않음.
+pq != qp
+
+6. 공액 사원수  
+사원수는 복소수의 일종이며, 스칼라부분이 실수부(realPart)
+벡터부분인 i,j,k 부분이 허수부(imaginary part)이다.
+즉 사원수의 벡터부분 부호를 반대로 해준것이 공액 사원수이다.
+(뭔가 이해하기 으렵다)
+
+
+7. 사원수의 크기(단위사원수)  
+사원수또한 벡터처럼 크기를 갖음. 사원수의 크기 공식
+d^2 + a^2 + b^2 + c^2 = p^2
+
+
+8. 사원수의 역수  
+-1 곱하면 됨
+
+
+#### 3. 사원수변환
+
+이제 그 복잡한 수식이 게임에서 어덯게 사용되는지 알아보자.  
+짜증나기까지 하는 복잡한 사원수에 대해서 알아본것은 어디서 잘난척하려는게   
+아니라 우리가 만드는게임에 적용하기 위함이다.  
+
+사원수는 공간상의 임의의 회전변환을 나타내기 위해 유용하게 사용된다.  
+
+q = q + qi + qj + qk  
+=cos(theta/2) + E*sin(theta/2) = Sq + Vq  
+
+벡터E는 회전축의 단위방향 벡터이다.
+theta는 회전각이다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
