--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -587,12 +587,37 @@ d^2 + a^2 + b^2 + c^2 = p^2
 아니라 우리가 만드는게임에 적용하기 위함이다.  
 
 사원수는 공간상의 임의의 회전변환을 나타내기 위해 유용하게 사용된다.  
+사원수의 변환은 다음과 같은 단위 사원수를 통해서 이루어진다.
 
 q = q + qi + qj + qk  
 =cos(theta/2) + E*sin(theta/2) = Sq + Vq  
 
 벡터E는 회전축의 단위방향 벡터이다.
 theta는 회전각이다.
+
+※ 여기서 잠깐 (단위사원수)
+공간상의 임의의 회전축을 표현하는 회전축의 방향벡터는 단위벡터로 지정해야 
+cos(theta/2) + Esin(theta/2)가 단위사원수가 된다.
+
+e가 단위벡터이므로 ex^2 + ey^2  + ez^2  = 1 이 된다.
+
+
+
+벡터r을 회전축 단위방향벡터 e에 대해서 theta만큼의 회전각으로 공간회전시킨 벡터r`은
+다음과 같이 단위 사운수 q^를 통해 얻을수 있다.
+
+사원수변환식 : r` = q^ r q(^-1)
+
+변환을 연결할때 사원수는 행렬표현 방법에 비해서 장접을 갖는다.  
+두 사원수의 곱셈에는 16번의 스칼라 곱셈과 덧셈이 수행되지만,  
+3x3회전 변환행렬 두개를 곱할경우에는 총 27번의 연산이 필요하기 때문에  
+사원수 곱셈을 통한 회전 변환의 표현이 계산속도가 더 빠르다.  
+또한 회전변환을 행렬로 표현하는데 사용되는 오일러변환은 한축의 각도가 90도가 되면  
+자유도를 잃어버리는 짐발락이라는 현상이 발생하여 회전이 부드럽지못하게 된다.  
+이때 사원수 변환을 사용하면 공간상의 임의의 축에 대한 회전이기 때문에 오일러변환의 문제가 발생하지않는다.  
+
+
+#### 4. 사원수변환의 행렬표현
 
 
 
