--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -619,7 +619,11 @@ e가 단위벡터이므로 ex^2 + ey^2  + ez^2  = 1 이 된다.
 
 #### 4. 사원수변환의 행렬표현
 
-
+사원수 변환을 사용하면 4개의 요소로 이루어진 사원수만을 이용하여 임의의 회전축에 대한 
+회전변환을 효율적으로 표현할 수 있지만, 우리가 게임프로그래밍에 사용하는 Direct3D나 OpenGL 
+같은 3D 그래픽 API 에서는 사원수를 직접적으로 지원하지 않는다.
+3D 그래픽API에서 기본적으로 지원하는 변환은 행렬변환이기 때문에 게임에 사원수변환을 적용할려면
+ 최종적으로 행렬의 형태로 변환해줘야 한다.
 
 
 
