--- a/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
+++ b/lLcrowe/좋은게임을 만드는 핵심원리 게임수학과 물리.md
@@ -625,6 +625,8 @@ e가 단위벡터이므로 ex^2 + ey^2  + ez^2  = 1 이 된다.
 3D 그래픽API에서 기본적으로 지원하는 변환은 행렬변환이기 때문에 게임에 사원수변환을 적용할려면
  최종적으로 행렬의 형태로 변환해줘야 한다.
 
+하나의 벡터를 임의의 회전축에 대해서 회전시키는 공간회전을 시작으로 사원수변환의 행렬표현에 대해 알아보자
+
 
 
 
